# OOASM_Computer

./: .gitignore  Add.cpp  Add.h  CMakeLists.txt  Data.cpp  Data.h  Dec.cpp  Dec.h  Elements.cc  Elements.cpp  Elements.h  Expression.h  Flags.cpp  Flags.h  Id.cc  Id.cpp  Id.h  Inc.cpp  Inc.h  Instruction.h  Instructions.cc  Instructions.cpp  Instructions.h  Lea.cpp  Lea.h  Lvalue.h  Mem.cpp  Mem.h  Memory.cc  Memory.cpp  Memory.h  Mov.cpp  Mov.h  Num.cpp  Num.h  One.h  Processor.cc  Processor.cpp  Processor.h  ProcessorFlags.h  (+21 more)
tests/: main.cc  ooasm_grzesiek.cc  ooasm_szulc.cc
